exports[`no-multiple-promise-resolver-calls > invalid(1): new Promise(resolve => {\n\tconst modes = new Set();\n\tmodes.add('foo');\n\n\tif (!modes.size) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	const modes = new Set();
   3 | 	modes.add('foo');
   4 |
   5 | 	if (!modes.size) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
  10 | 	resolve();
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(1): new Promise(resolve => {\n\tconst modes = new Set();\n\tmodes.add('foo');\n\n\tif (!modes.size) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	const modes = new Set();
   3 | 	modes.add('foo');
   4 |
   5 | 	if (!modes.size) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
> 10 | 	resolve();
     | 	^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(10): import process from 'node:process';\n\nnew Promise((resolve, reject) => {\n\tresolve(value);\n\tprocess.exit(1);\n\treject(error);\n}); 1`] = `

  1 | import process from 'node:process';
  2 |
  3 | new Promise((resolve, reject) => {
  4 | 	resolve(value);
  5 | 	process.exit(1);
  6 | 	reject(error);
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(10): import process from 'node:process';\n\nnew Promise((resolve, reject) => {\n\tresolve(value);\n\tprocess.exit(1);\n\treject(error);\n}); 2`] = `

Message:
  1 | import process from 'node:process';
  2 |
  3 | new Promise((resolve, reject) => {
  4 | 	resolve(value);
  5 | 	process.exit(1);
> 6 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(11): new Promise(resolve => {\n\tclass Example {\n\t\tstatic field = () => process.exit(1);\n\t}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	class Example {
  3 | 		static field = () => process.exit(1);
  4 | 	}
  5 |
  6 | 	resolve(value);
  7 | 	resolve(otherValue);
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(11): new Promise(resolve => {\n\tclass Example {\n\t\tstatic field = () => process.exit(1);\n\t}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	class Example {
  3 | 		static field = () => process.exit(1);
  4 | 	}
  5 |
  6 | 	resolve(value);
> 7 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(12): new Promise((resolve, reject, extra = condition ? process.exit(1) : value) => {\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise((resolve, reject, extra = condition ? process.exit(1) : value) => {
  2 | 	resolve(value);
  3 | 	resolve(otherValue);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(12): new Promise((resolve, reject, extra = condition ? process.exit(1) : value) => {\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject, extra = condition ? process.exit(1) : value) => {
  2 | 	resolve(value);
> 3 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(13): new Promise((resolve, reject) => {\n\tresolve(value);\n\treject(error);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	resolve(value);
  3 | 	reject(error);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(13): new Promise((resolve, reject) => {\n\tresolve(value);\n\treject(error);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	resolve(value);
> 3 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(14): new Promise(resolve => {\n\tif (condition) {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	if (condition) {
  3 | 		resolve(value);
  4 | 	}
  5 |
  6 | 	resolve(otherValue);
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(14): new Promise(resolve => {\n\tif (condition) {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	if (condition) {
  3 | 		resolve(value);
  4 | 	}
  5 |
> 6 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(15): new Promise((resolve, reject) => {\n\tif (condition) {\n\t\tresolve(value);\n\t} else {\n\t\treject(error);\n\t}\n\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	if (condition) {
  3 | 		resolve(value);
  4 | 	} else {
  5 | 		reject(error);
  6 | 	}
  7 |
  8 | 	resolve(otherValue);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(15): new Promise((resolve, reject) => {\n\tif (condition) {\n\t\tresolve(value);\n\t} else {\n\t\treject(error);\n\t}\n\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	if (condition) {
  3 | 		resolve(value);
  4 | 	} else {
  5 | 		reject(error);
  6 | 	}
  7 |
> 8 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(16): new Promise((resolve, reject) => { condition ? resolve(value) : reject(error); resolve(otherValue); }); 1`] = `

  1 | new Promise((resolve, reject) => { condition ? resolve(value) : reject(error); resolve(otherValue); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(16): new Promise((resolve, reject) => { condition ? resolve(value) : reject(error); resolve(otherValue); }); 2`] = `

Message:
> 1 | new Promise((resolve, reject) => { condition ? resolve(value) : reject(error); resolve(otherValue); });
    |                                                                                ^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(17): new Promise((resolve, reject) => { condition && resolve(value); reject(error); }); 1`] = `

  1 | new Promise((resolve, reject) => { condition && resolve(value); reject(error); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(17): new Promise((resolve, reject) => { condition && resolve(value); reject(error); }); 2`] = `

Message:
> 1 | new Promise((resolve, reject) => { condition && resolve(value); reject(error); });
    |                                                                 ^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(18): new Promise((resolve, reject) => {\n\tread((error, value) => {\n\t\tif (error) {\n\t\t\treject(error);\n\t\t}\n\n\t\tresolve(value);\n\t});\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	read((error, value) => {
  3 | 		if (error) {
  4 | 			reject(error);
  5 | 		}
  6 |
  7 | 		resolve(value);
  8 | 	});
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(18): new Promise((resolve, reject) => {\n\tread((error, value) => {\n\t\tif (error) {\n\t\t\treject(error);\n\t\t}\n\n\t\tresolve(value);\n\t});\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	read((error, value) => {
  3 | 		if (error) {
  4 | 			reject(error);
  5 | 		}
  6 |
> 7 | 		resolve(value);
    | 		^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | 	});
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(19): new Promise((resolve, reject) => {\n\ttry {\n\t\treject(error);\n\t} finally {\n\t\tresolve(value);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		reject(error);
  4 | 	} finally {
  5 | 		resolve(value);
  6 | 	}
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(19): new Promise((resolve, reject) => {\n\ttry {\n\t\treject(error);\n\t} finally {\n\t\tresolve(value);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		reject(error);
  4 | 	} finally {
> 5 | 		resolve(value);
    | 		^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  6 | 	}
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(2): new Promise(resolve => {\n\tconst modes = new Set(['foo']);\n\tmodes.clear();\n\n\tif (modes.size || condition) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	const modes = new Set(['foo']);
   3 | 	modes.clear();
   4 |
   5 | 	if (modes.size || condition) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
  10 | 	resolve();
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(2): new Promise(resolve => {\n\tconst modes = new Set(['foo']);\n\tmodes.clear();\n\n\tif (modes.size || condition) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	const modes = new Set(['foo']);
   3 | 	modes.clear();
   4 |
   5 | 	if (modes.size || condition) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
> 10 | 	resolve();
     | 	^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(20): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(value);\n\t\tmayThrow();\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(value);
  4 | 		mayThrow();
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(20): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(value);\n\t\tmayThrow();\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(value);
  4 | 		mayThrow();
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(21): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tobject.value;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		object.value;
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(21): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tobject.value;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		object.value;
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(22): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tnew Constructor();\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		new Constructor();
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(22): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tnew Constructor();\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		new Constructor();
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(23): new Promise((resolve, reject) => {\n\tconsume(function * () {\n\t\ttry {\n\t\t\tresolve();\n\t\t\tyield value;\n\t\t} catch (error) {\n\t\t\treject(error);\n\t\t}\n\t});\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	consume(function * () {
   3 | 		try {
   4 | 			resolve();
   5 | 			yield value;
   6 | 		} catch (error) {
   7 | 			reject(error);
   8 | 		}
   9 | 	});
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(23): new Promise((resolve, reject) => {\n\tconsume(function * () {\n\t\ttry {\n\t\t\tresolve();\n\t\t\tyield value;\n\t\t} catch (error) {\n\t\t\treject(error);\n\t\t}\n\t});\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	consume(function * () {
   3 | 		try {
   4 | 			resolve();
   5 | 			yield value;
   6 | 		} catch (error) {
>  7 | 			reject(error);
     | 			^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
   8 | 		}
   9 | 	});
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(24): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\tresolve(value);\n\t\t\tmayThrow();\n\t\t} else {\n\t\t\totherMayThrow();\n\t\t\tresolve(otherValue);\n\t\t}\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			resolve(value);
   5 | 			mayThrow();
   6 | 		} else {
   7 | 			otherMayThrow();
   8 | 			resolve(otherValue);
   9 | 		}
  10 | 	} catch (error) {
  11 | 		reject(error);
  12 | 	}
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(24): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\tresolve(value);\n\t\t\tmayThrow();\n\t\t} else {\n\t\t\totherMayThrow();\n\t\t\tresolve(otherValue);\n\t\t}\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			resolve(value);
   5 | 			mayThrow();
   6 | 		} else {
   7 | 			otherMayThrow();
   8 | 			resolve(otherValue);
   9 | 		}
  10 | 	} catch (error) {
> 11 | 		reject(error);
     | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  12 | 	}
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(25): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\totherMayThrow();\n\t\t\tresolve(otherValue);\n\t\t} else {\n\t\t\tresolve(value);\n\t\t\tmayThrow();\n\t\t}\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			otherMayThrow();
   5 | 			resolve(otherValue);
   6 | 		} else {
   7 | 			resolve(value);
   8 | 			mayThrow();
   9 | 		}
  10 | 	} catch (error) {
  11 | 		reject(error);
  12 | 	}
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(25): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\totherMayThrow();\n\t\t\tresolve(otherValue);\n\t\t} else {\n\t\t\tresolve(value);\n\t\t\tmayThrow();\n\t\t}\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			otherMayThrow();
   5 | 			resolve(otherValue);
   6 | 		} else {
   7 | 			resolve(value);
   8 | 			mayThrow();
   9 | 		}
  10 | 	} catch (error) {
> 11 | 		reject(error);
     | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  12 | 	}
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(26): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(value);\n\t\tthrow error;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(value);
  4 | 		throw error;
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(26): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(value);\n\t\tthrow error;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(value);
  4 | 		throw error;
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(27): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n\n\tresolve(fallbackValue);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(mayThrow());
  4 | 	} catch (error) {
  5 | 		reject(error);
  6 | 	}
  7 |
  8 | 	resolve(fallbackValue);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(27): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n\n\tresolve(fallbackValue);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(mayThrow());
  4 | 	} catch (error) {
  5 | 		reject(error);
  6 | 	}
  7 |
> 8 | 	resolve(fallbackValue);
    | 	^^^^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(28): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t\treject(otherError);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(mayThrow());
  4 | 	} catch (error) {
  5 | 		reject(error);
  6 | 		reject(otherError);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(28): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t\treject(otherError);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(mayThrow());
  4 | 	} catch (error) {
  5 | 		reject(error);
> 6 | 		reject(otherError);
    | 		^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(29): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(firstValue);\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(firstValue);
  4 | 		resolve(mayThrow());
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(29): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(firstValue);\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(firstValue);
> 4 | 		resolve(mayThrow());
    | 		^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(29): new Promise((resolve, reject) => {\n\ttry {\n\t\tresolve(firstValue);\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 3`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		resolve(firstValue);
  4 | 		resolve(mayThrow());
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(3): new Promise(resolve => {\n\tconst object = {value: true};\n\tObject.defineProperty(object, 'value', {get() { return false; }});\n\n\tif (object.value) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	const object = {value: true};
   3 | 	Object.defineProperty(object, 'value', {get() { return false; }});
   4 |
   5 | 	if (object.value) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
  10 | 	resolve();
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(3): new Promise(resolve => {\n\tconst object = {value: true};\n\tObject.defineProperty(object, 'value', {get() { return false; }});\n\n\tif (object.value) {\n\t\treturn;\n\t}\n\n\tresolve();\n\tresolve();\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	const object = {value: true};
   3 | 	Object.defineProperty(object, 'value', {get() { return false; }});
   4 |
   5 | 	if (object.value) {
   6 | 		return;
   7 | 	}
   8 |
   9 | 	resolve();
> 10 | 	resolve();
     | 	^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(30): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\tresolve(firstValue);\n\t\t}\n\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			resolve(firstValue);
   5 | 		}
   6 |
   7 | 		resolve(mayThrow());
   8 | 	} catch (error) {
   9 | 		reject(error);
  10 | 	}
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(30): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\tresolve(firstValue);\n\t\t}\n\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			resolve(firstValue);
   5 | 		}
   6 |
>  7 | 		resolve(mayThrow());
     | 		^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
   8 | 	} catch (error) {
   9 | 		reject(error);
  10 | 	}
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(30): new Promise((resolve, reject) => {\n\ttry {\n\t\tif (condition) {\n\t\t\tresolve(firstValue);\n\t\t}\n\n\t\tresolve(mayThrow());\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 3`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		if (condition) {
   4 | 			resolve(firstValue);
   5 | 		}
   6 |
   7 | 		resolve(mayThrow());
   8 | 	} catch (error) {
>  9 | 		reject(error);
     | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  10 | 	}
  11 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(31): new Promise(resolve => {\n\twhile (condition) {\n\t\tresolve(value);\n\t}\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	while (condition) {
  3 | 		resolve(value);
  4 | 	}
  5 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(31): new Promise(resolve => {\n\twhile (condition) {\n\t\tresolve(value);\n\t}\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	while (condition) {
> 3 | 		resolve(value);
    | 		^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | 	}
  5 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(32): new Promise(resolve => {\n\tfor (const value of values) {\n\t\tresolve(value);\n\t}\n\n\tresolve(fallbackValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	for (const value of values) {
  3 | 		resolve(value);
  4 | 	}
  5 |
  6 | 	resolve(fallbackValue);
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(32): new Promise(resolve => {\n\tfor (const value of values) {\n\t\tresolve(value);\n\t}\n\n\tresolve(fallbackValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	for (const value of values) {
> 3 | 		resolve(value);
    | 		^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | 	}
  5 |
  6 | 	resolve(fallbackValue);
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(32): new Promise(resolve => {\n\tfor (const value of values) {\n\t\tresolve(value);\n\t}\n\n\tresolve(fallbackValue);\n}); 3`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	for (const value of values) {
  3 | 		resolve(value);
  4 | 	}
  5 |
> 6 | 	resolve(fallbackValue);
    | 	^^^^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(33): new Promise(resolveOuter => {\n\tnew Promise(resolveInner => {\n\t\tresolveOuter(value);\n\t\tresolveInner(innerValue);\n\t\tresolveOuter(otherValue);\n\t});\n}); 1`] = `

  1 | new Promise(resolveOuter => {
  2 | 	new Promise(resolveInner => {
  3 | 		resolveOuter(value);
  4 | 		resolveInner(innerValue);
  5 | 		resolveOuter(otherValue);
  6 | 	});
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(33): new Promise(resolveOuter => {\n\tnew Promise(resolveInner => {\n\t\tresolveOuter(value);\n\t\tresolveInner(innerValue);\n\t\tresolveOuter(otherValue);\n\t});\n}); 2`] = `

Message:
  1 | new Promise(resolveOuter => {
  2 | 	new Promise(resolveInner => {
  3 | 		resolveOuter(value);
  4 | 		resolveInner(innerValue);
> 5 | 		resolveOuter(otherValue);
    | 		^^^^^^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  6 | 	});
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(34): new Promise(resolveOuter => {\n\tnew Promise(resolveInner => {\n\t\tresolveInner(innerValue);\n\t\tresolveOuter(value);\n\t\tresolveInner(otherInnerValue);\n\t});\n}); 1`] = `

  1 | new Promise(resolveOuter => {
  2 | 	new Promise(resolveInner => {
  3 | 		resolveInner(innerValue);
  4 | 		resolveOuter(value);
  5 | 		resolveInner(otherInnerValue);
  6 | 	});
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(34): new Promise(resolveOuter => {\n\tnew Promise(resolveInner => {\n\t\tresolveInner(innerValue);\n\t\tresolveOuter(value);\n\t\tresolveInner(otherInnerValue);\n\t});\n}); 2`] = `

Message:
  1 | new Promise(resolveOuter => {
  2 | 	new Promise(resolveInner => {
  3 | 		resolveInner(innerValue);
  4 | 		resolveOuter(value);
> 5 | 		resolveInner(otherInnerValue);
    | 		^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  6 | 	});
  7 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(35): new Promise(async (resolve, reject) => {\n\tresolve(await getValue());\n\treject(error);\n}); 1`] = `

  1 | new Promise(async (resolve, reject) => {
  2 | 	resolve(await getValue());
  3 | 	reject(error);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(35): new Promise(async (resolve, reject) => {\n\tresolve(await getValue());\n\treject(error);\n}); 2`] = `

Message:
  1 | new Promise(async (resolve, reject) => {
  2 | 	resolve(await getValue());
> 3 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(36): new Promise(resolve => {\n\tresolve?.(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	resolve?.(value);
  3 | 	resolve(otherValue);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(36): new Promise(resolve => {\n\tresolve?.(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	resolve?.(value);
> 3 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(37): new Promise<string>((resolve: (value: string) => void) => { resolve(value); resolve(otherValue); }); 1`] = `

  1 | new Promise<string>((resolve: (value: string) => void) => { resolve(value); resolve(otherValue); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(37): new Promise<string>((resolve: (value: string) => void) => { resolve(value); resolve(otherValue); }); 2`] = `

Message:
> 1 | new Promise<string>((resolve: (value: string) => void) => { resolve(value); resolve(otherValue); });
    |                                                                             ^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(38): new Promise((resolve: (value?: unknown) => void) => { resolve!(); (resolve as typeof resolve)(); }); 1`] = `

  1 | new Promise((resolve: (value?: unknown) => void) => { resolve!(); (resolve as typeof resolve)(); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(38): new Promise((resolve: (value?: unknown) => void) => { resolve!(); (resolve as typeof resolve)(); }); 2`] = `

Message:
> 1 | new Promise((resolve: (value?: unknown) => void) => { resolve!(); (resolve as typeof resolve)(); });
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(39): new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) as Executor); 1`] = `

  1 | new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) as Executor);

`;

exports[`no-multiple-promise-resolver-calls > invalid(39): new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) as Executor); 2`] = `

Message:
> 1 | new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) as Executor);
    |                                                                   ^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(4): new Promise(resolve => {\n\ttry {\n\t\tswitch (value) {\n\t\t\tdefault:\n\t\t\t\tbreak;\n\t\t\tcase process.exit(1):\n\t\t\t\t{}\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		switch (value) {
   4 | 			default:
   5 | 				break;
   6 | 			case process.exit(1):
   7 | 				{}
   8 | 		}
   9 | 	} catch {}
  10 |
  11 | 	resolve(value);
  12 | 	resolve(otherValue);
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(4): new Promise(resolve => {\n\ttry {\n\t\tswitch (value) {\n\t\t\tdefault:\n\t\t\t\tbreak;\n\t\t\tcase process.exit(1):\n\t\t\t\t{}\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		switch (value) {
   4 | 			default:
   5 | 				break;
   6 | 			case process.exit(1):
   7 | 				{}
   8 | 		}
   9 | 	} catch {}
  10 |
  11 | 	resolve(value);
> 12 | 	resolve(otherValue);
     | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(40): new Promise((<Type>(resolve: (value?: unknown) => void) => { resolve(); resolve(); })<unknown>); 1`] = `

  1 | new Promise((<Type>(resolve: (value?: unknown) => void) => { resolve(); resolve(); })<unknown>);

`;

exports[`no-multiple-promise-resolver-calls > invalid(40): new Promise((<Type>(resolve: (value?: unknown) => void) => { resolve(); resolve(); })<unknown>); 2`] = `

Message:
> 1 | new Promise((<Type>(resolve: (value?: unknown) => void) => { resolve(); resolve(); })<unknown>);
    |                                                                         ^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(41): new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) satisfies Executor); 1`] = `

  1 | new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) satisfies Executor);

`;

exports[`no-multiple-promise-resolver-calls > invalid(41): new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) satisfies Executor); 2`] = `

Message:
> 1 | new Promise(((resolve: (value?: unknown) => void) => { resolve(); resolve(); }) satisfies Executor);
    |                                                                   ^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(42): new Promise((resolve, reject, extra = resolve()) => { resolve(); }); 1`] = `

  1 | new Promise((resolve, reject, extra = resolve()) => { resolve(); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(42): new Promise((resolve, reject, extra = resolve()) => { resolve(); }); 2`] = `

Message:
> 1 | new Promise((resolve, reject, extra = resolve()) => { resolve(); });
    |                                                       ^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(43): new Promise((resolve, reject) => { resolve = otherResolve; reject(); reject(); }); 1`] = `

  1 | new Promise((resolve, reject) => { resolve = otherResolve; reject(); reject(); });

`;

exports[`no-multiple-promise-resolver-calls > invalid(43): new Promise((resolve, reject) => { resolve = otherResolve; reject(); reject(); }); 2`] = `

Message:
> 1 | new Promise((resolve, reject) => { resolve = otherResolve; reject(); reject(); });
    |                                                                      ^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.

`;

exports[`no-multiple-promise-resolver-calls > invalid(44): new Promise(function (resolve, reject) {\n\tresolve(value);\n\treject(error);\n}); 1`] = `

  1 | new Promise(function (resolve, reject) {
  2 | 	resolve(value);
  3 | 	reject(error);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(44): new Promise(function (resolve, reject) {\n\tresolve(value);\n\treject(error);\n}); 2`] = `

Message:
  1 | new Promise(function (resolve, reject) {
  2 | 	resolve(value);
> 3 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(45): new Promise(async (resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tawait import('missing');\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise(async (resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		await import('missing');
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(45): new Promise(async (resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tawait import('missing');\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise(async (resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		await import('missing');
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(46): new Promise(async (resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tawait value;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 1`] = `

  1 | new Promise(async (resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		await value;
  5 | 	} catch (error) {
  6 | 		reject(error);
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(46): new Promise(async (resolve, reject) => {\n\ttry {\n\t\tresolve();\n\t\tawait value;\n\t} catch (error) {\n\t\treject(error);\n\t}\n}); 2`] = `

Message:
  1 | new Promise(async (resolve, reject) => {
  2 | 	try {
  3 | 		resolve();
  4 | 		await value;
  5 | 	} catch (error) {
> 6 | 		reject(error);
    | 		^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  7 | 	}
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(47): new Promise((resolve, reject) => {\n\tswitch (value) {\n\t\tcase 1: {\n\t\t\tresolve();\n\t\t}\n\t\tdefault: {\n\t\t\treject();\n\t\t}\n\t}\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	switch (value) {
   3 | 		case 1: {
   4 | 			resolve();
   5 | 		}
   6 | 		default: {
   7 | 			reject();
   8 | 		}
   9 | 	}
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(47): new Promise((resolve, reject) => {\n\tswitch (value) {\n\t\tcase 1: {\n\t\t\tresolve();\n\t\t}\n\t\tdefault: {\n\t\t\treject();\n\t\t}\n\t}\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	switch (value) {
   3 | 		case 1: {
   4 | 			resolve();
   5 | 		}
   6 | 		default: {
>  7 | 			reject();
     | 			^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
   8 | 		}
   9 | 	}
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(48): new Promise(resolve => {\n\ttry {\n\t\tconst value = maybeThrow(), exitCode = process.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		const value = maybeThrow(), exitCode = process.exit(1);
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
  7 | 	resolve(otherValue);
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(48): new Promise(resolve => {\n\ttry {\n\t\tconst value = maybeThrow(), exitCode = process.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		const value = maybeThrow(), exitCode = process.exit(1);
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
> 7 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(49): new Promise(resolve => {\n\ttry {\n\t\tif (maybeThrow()) return;\n\t\tprocess.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		if (maybeThrow()) return;
  4 | 		process.exit(1);
  5 | 	} catch {}
  6 |
  7 | 	resolve(value);
  8 | 	resolve(otherValue);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(49): new Promise(resolve => {\n\ttry {\n\t\tif (maybeThrow()) return;\n\t\tprocess.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		if (maybeThrow()) return;
  4 | 		process.exit(1);
  5 | 	} catch {}
  6 |
  7 | 	resolve(value);
> 8 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(5): new Promise((resolve, reject) => {\n\ttry {\n\t\ttry {\n\t\t\tthrow error;\n\t\t} catch {\n\t\t\tthrow error;\n\t\t}\n\n\t\tprocess.exit(1);\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		try {
   4 | 			throw error;
   5 | 		} catch {
   6 | 			throw error;
   7 | 		}
   8 |
   9 | 		process.exit(1);
  10 | 	} catch {
  11 | 		resolve(value);
  12 | 	}
  13 |
  14 | 	resolve(otherValue);
  15 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(5): new Promise((resolve, reject) => {\n\ttry {\n\t\ttry {\n\t\t\tthrow error;\n\t\t} catch {\n\t\t\tthrow error;\n\t\t}\n\n\t\tprocess.exit(1);\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		try {
   4 | 			throw error;
   5 | 		} catch {
   6 | 			throw error;
   7 | 		}
   8 |
   9 | 		process.exit(1);
  10 | 	} catch {
  11 | 		resolve(value);
  12 | 	}
  13 |
> 14 | 	resolve(otherValue);
     | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  15 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(50): new Promise(resolve => {\n\ttry {\n\t\t[maybeThrow(), process.exit(1)];\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		[maybeThrow(), process.exit(1)];
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
  7 | 	resolve(otherValue);
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(50): new Promise(resolve => {\n\ttry {\n\t\t[maybeThrow(), process.exit(1)];\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		[maybeThrow(), process.exit(1)];
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
> 7 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(51): new Promise(resolve => {\n\ttry {\n\t\t({[maybeThrow()]: process.exit(1)});\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		({[maybeThrow()]: process.exit(1)});
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
  7 | 	resolve(otherValue);
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(51): new Promise(resolve => {\n\ttry {\n\t\t({[maybeThrow()]: process.exit(1)});\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		({[maybeThrow()]: process.exit(1)});
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
> 7 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(52): new Promise(resolve => {\n\ttry {\n\t\tusing resource = 1;\n\t\tprocess.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		using resource = 1;
  4 | 		process.exit(1);
  5 | 	} catch {}
  6 |
  7 | 	resolve(value);
  8 | 	resolve(otherValue);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(52): new Promise(resolve => {\n\ttry {\n\t\tusing resource = 1;\n\t\tprocess.exit(1);\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		using resource = 1;
  4 | 		process.exit(1);
  5 | 	} catch {}
  6 |
  7 | 	resolve(value);
> 8 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(53): new Promise(resolve => {\n\ttry {\n\t\tclass Example {\n\t\t\tstatic {\n\t\t\t\tmaybeThrow();\n\t\t\t\tprocess.exit(1);\n\t\t\t}\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		class Example {
   4 | 			static {
   5 | 				maybeThrow();
   6 | 				process.exit(1);
   7 | 			}
   8 | 		}
   9 | 	} catch {}
  10 |
  11 | 	resolve(value);
  12 | 	resolve(otherValue);
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(53): new Promise(resolve => {\n\ttry {\n\t\tclass Example {\n\t\t\tstatic {\n\t\t\t\tmaybeThrow();\n\t\t\t\tprocess.exit(1);\n\t\t\t}\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		class Example {
   4 | 			static {
   5 | 				maybeThrow();
   6 | 				process.exit(1);
   7 | 			}
   8 | 		}
   9 | 	} catch {}
  10 |
  11 | 	resolve(value);
> 12 | 	resolve(otherValue);
     | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  13 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(54): new Promise(resolve => {\n\ttry {\n\t\tclass Example {\n\t\t\tstatic field = (maybeThrow(), process.exit(1));\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		class Example {
   4 | 			static field = (maybeThrow(), process.exit(1));
   5 | 		}
   6 | 	} catch {}
   7 |
   8 | 	resolve(value);
   9 | 	resolve(otherValue);
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(54): new Promise(resolve => {\n\ttry {\n\t\tclass Example {\n\t\t\tstatic field = (maybeThrow(), process.exit(1));\n\t\t}\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
   1 | new Promise(resolve => {
   2 | 	try {
   3 | 		class Example {
   4 | 			static field = (maybeThrow(), process.exit(1));
   5 | 		}
   6 | 	} catch {}
   7 |
   8 | 	resolve(value);
>  9 | 	resolve(otherValue);
     | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(55): new Promise(resolve => {\n\ttry {\n\t\t(maybeThrow(), {})[process.exit(1)];\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		(maybeThrow(), {})[process.exit(1)];
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
  7 | 	resolve(otherValue);
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(55): new Promise(resolve => {\n\ttry {\n\t\t(maybeThrow(), {})[process.exit(1)];\n\t} catch {}\n\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise(resolve => {
  2 | 	try {
  3 | 		(maybeThrow(), {})[process.exit(1)];
  4 | 	} catch {}
  5 |
  6 | 	resolve(value);
> 7 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  8 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(56): new Promise((resolve, reject, extra = foo?.(process.exit(1))) => {\n\tresolve(value);\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise((resolve, reject, extra = foo?.(process.exit(1))) => {
  2 | 	resolve(value);
  3 | 	resolve(otherValue);
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(56): new Promise((resolve, reject, extra = foo?.(process.exit(1))) => {\n\tresolve(value);\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject, extra = foo?.(process.exit(1))) => {
  2 | 	resolve(value);
> 3 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  4 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(6): new Promise((resolve, reject) => {\n\ttry {\n\t\tmaybeThrow();\n\t\tprocess.exit(1);\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 1`] = `

   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		maybeThrow();
   4 | 		process.exit(1);
   5 | 	} catch {
   6 | 		resolve(value);
   7 | 	}
   8 |
   9 | 	resolve(otherValue);
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(6): new Promise((resolve, reject) => {\n\ttry {\n\t\tmaybeThrow();\n\t\tprocess.exit(1);\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 2`] = `

Message:
   1 | new Promise((resolve, reject) => {
   2 | 	try {
   3 | 		maybeThrow();
   4 | 		process.exit(1);
   5 | 	} catch {
   6 | 		resolve(value);
   7 | 	}
   8 |
>  9 | 	resolve(otherValue);
     | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  10 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(7): new Promise((resolve, reject) => {\n\ttry {\n\t\t(maybeThrow(), process.exit(1));\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		(maybeThrow(), process.exit(1));
  4 | 	} catch {
  5 | 		resolve(value);
  6 | 	}
  7 |
  8 | 	resolve(otherValue);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(7): new Promise((resolve, reject) => {\n\ttry {\n\t\t(maybeThrow(), process.exit(1));\n\t} catch {\n\t\tresolve(value);\n\t}\n\n\tresolve(otherValue);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	try {
  3 | 		(maybeThrow(), process.exit(1));
  4 | 	} catch {
  5 | 		resolve(value);
  6 | 	}
  7 |
> 8 | 	resolve(otherValue);
    | 	^^^^^^^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(8): new Promise((resolve, reject) => {\n\tif (condition) {\n\t\tprocess.exit(1);\n\t} else {\n\t\tresolve(value);\n\t}\n\n\treject(error);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	if (condition) {
  3 | 		process.exit(1);
  4 | 	} else {
  5 | 		resolve(value);
  6 | 	}
  7 |
  8 | 	reject(error);
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(8): new Promise((resolve, reject) => {\n\tif (condition) {\n\t\tprocess.exit(1);\n\t} else {\n\t\tresolve(value);\n\t}\n\n\treject(error);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	if (condition) {
  3 | 		process.exit(1);
  4 | 	} else {
  5 | 		resolve(value);
  6 | 	}
  7 |
> 8 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  9 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(9): new Promise((resolve, reject) => {\n\tresolve(value);\n\tconst process = customProcess;\n\tprocess.exit(1);\n\treject(error);\n}); 1`] = `

  1 | new Promise((resolve, reject) => {
  2 | 	resolve(value);
  3 | 	const process = customProcess;
  4 | 	process.exit(1);
  5 | 	reject(error);
  6 | });

`;

exports[`no-multiple-promise-resolver-calls > invalid(9): new Promise((resolve, reject) => {\n\tresolve(value);\n\tconst process = customProcess;\n\tprocess.exit(1);\n\treject(error);\n}); 2`] = `

Message:
  1 | new Promise((resolve, reject) => {
  2 | 	resolve(value);
  3 | 	const process = customProcess;
  4 | 	process.exit(1);
> 5 | 	reject(error);
    | 	^^^^^^^^^^^^^ Promise executor resolver functions may be called multiple times on the same execution path.
  6 | });

`;
